--- a/src/component/layout/errorPopup.module.css
+++ b/src/component/layout/errorPopup.module.css
@@ -4,13 +4,18 @@
   top: -100%;
   animation: slideDown 1s ease-in-out forwards;
 
+  background-color: gold;
+  text-align: center;
   left: 50%;
-  background-color: rgb(111, 248, 111);
   width: 30rem;
   height: 4.7rem;
   height: fit-content;
   padding: 0.4rem;
   transform: translate(-50%);
+  color: rgb(5, 174, 5);
+  border-bottom: 5px solid rgb(5, 174, 5);
+  border-left: 5px solid rgb(5, 174, 5);
+  border-right: 5px solid rgb(5, 174, 5);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   z-index: 10;
@@ -27,7 +32,8 @@
 }
 
 .mainNotGood {
-  background-color: rgb(248, 111, 111);
+  border-color: rgb(177, 0, 0);
+  color: rgb(177, 0, 0);
 }
 .h4,
 .p {
