--- a/src/component/GameArea/DashboardPlayer.module.css
+++ b/src/component/GameArea/DashboardPlayer.module.css
@@ -5,7 +5,8 @@
 
 .character {
   margin: 1rem auto;
-  width: 7rem;
+  width: fit-content;
+  padding: 0.3rem;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
