--- a/src/component/ActiveGameManagement/DashboardActiveGame.module.css
+++ b/src/component/ActiveGameManagement/DashboardActiveGame.module.css
@@ -21,7 +21,7 @@
 
 .link {
   text-align: center;
-  color: gold;
+  color: #ffd700;
   background-color: rgb(113, 113, 113);
   padding: 0.5rem;
   width: 32vw;
