--- a/src/component/GameList.module.css
+++ b/src/component/GameList.module.css
@@ -32,6 +32,13 @@
   margin-top: 4rem;
 }
 
+.spiner {
+  width: 5rem;
+  height: 7rem;
+  border: none;
+  margin-top: 10rem;
+}
+
 @media (max-width: 850px) {
   .main {
     padding-top: 5rem;
