--- a/src/component/homePage.module.css
+++ b/src/component/homePage.module.css
@@ -8,7 +8,7 @@
   animation-iteration-count: 1;
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   z-index: -3;
 }
 
@@ -158,12 +158,12 @@
 
 .middle > h2 {
   margin: 4rem 0;
-  /* height: 30vh; */
   font-size: 2rem;
   font-weight: 700;
 }
-.middle > h2 > strong {
+strong {
   color: #07008e;
+  font-size: 1.4rem;
 }
 
 .middle > div {
@@ -198,6 +198,10 @@
 }
 
 @media (max-width: 850px) {
+  .main_page {
+    height: 130vh;
+  }
+
   .button > button {
     margin-bottom: 1rem;
     width: 10rem;
