--- a/src/component/AdminDashboard.module.css
+++ b/src/component/AdminDashboard.module.css
@@ -1,10 +1,9 @@
 .main_page {
   display: flex;
   justify-content: center;
-  border-top: 1px solid gold;
-  padding: o;
   background: rgba(255, 217, 0, 0.211);
-  height: 88.9vh;
+  height: 100vw;
+  padding-top: 30vh;
 }
 
 .main_page a {
@@ -13,7 +12,7 @@
   width: 8rem;
   text-align: center;
   margin: 2rem;
-  margin-top: 6rem;
+
   font-size: 1.5rem;
   border-radius: 5px;
   background-color: #333;
