--- a/src/component/GameList.module.css
+++ b/src/component/GameList.module.css
@@ -1,10 +1,10 @@
 .main {
+  padding-top: 7rem;
   display: flex;
   justify-content: center;
-  border-top: 1px solid gold;
   padding: o;
   background: rgba(255, 217, 0, 0.211);
-  height: 88.9vh;
+  height: 100vh;
   overflow: scroll;
 }
 .main::-webkit-scrollbar {
